[package]
name = "muckchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.64"
# error handling
anyhow = "1.0"
# log
env_logger = "0.10"
log = "0.4.17"
# crypto
p256 = { version = "0.12.0", features = ["pem", "serde"] }
sha2 = "0.10.6"
# random
rand = "0.8.3"
# serialization
serde = { version = "1.0", features = ["derive"] }
typetag = "0.2.5"
# this allows us to use serialzie and deserialize in traits
erased-serde = "0.3"
# json
serde_json = "1.0.70"
